# CPPExercises2021

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPPExercises.cbp  LICENSE  Makefile  cmake_install.cmake
lesson01/: CMakeLists.txt  Makefile  cmake_install.cmake  lesson01.cbp
lesson01/src/: fib.h  main.cpp  simple_fib.cpp  simple_sum.cpp  simple_sum.h  some_math.cpp  some_math.h
lesson01/tests/: lesson01_tests.cpp
lesson02/: CMakeLists.txt  Makefile  cmake_install.cmake  lesson02vector.cbp
lesson02/src/: helper_function.cpp  helper_function.h  main.cpp
lesson03/: CMakeLists.txt  Makefile  cmake_install.cmake  lesson03greenscreen.cbp  lesson03greenscreen.ilk
lesson03/src/: helper_functions.cpp  helper_functions.h  main.cpp
lesson04/: CMakeLists.txt
lesson04/src/: disjoint_set.cpp  disjoint_set.h  helper_functions.cpp  helper_functions.h  main.cpp  morphology.cpp  morphology.h
lesson05/: CMakeLists.txt
lesson05/src/: main.cpp  sobel.cpp  sobel.h
lesson06/: CMakeLists.txt
lesson06/resultsData/: comment.txt
lesson06/src/: blur.cpp  blur.h  main.cpp
lesson07/: CMakeLists.txt
lesson07/resultsData/: comment.txt
lesson07/src/: hough.cpp  hough.h  main.cpp
lesson08/: CMakeLists.txt
lesson08/resultsData/: comment.txt
lesson08/src/: hough.cpp  hough.h  main.cpp
lesson09/: CMakeLists.txt
lesson09/src/: hough.cpp  hough.h  main.cpp
lesson10/: CMakeLists.txt
lesson10/generatedData/letters/: comment.txt
lesson10/src/: hog.cpp  hog.h  main.cpp  mainSymbolsGenerator.cpp
lesson11/: CMakeLists.txt
lesson11/src/: main.cpp  parseSymbols.cpp  parseSymbols.h
lesson12/: CMakeLists.txt
lesson12/src/: line.cpp  line.h  main.cpp
lesson13/: CMakeLists.txt
lesson13/data/: more_data_links.txt
lesson13/resultsData/: comment.txt
lesson13/src/: main.cpp
lesson14/: CMakeLists.txt
lesson14/src/: main.cpp
lesson15/: CMakeLists.txt
lesson15/data/mazesText/: 1.out  3.in  4.in
lesson15/src/: mainDijkstra.cpp  mainMaze.cpp
lesson16/: CMakeLists.txt
lesson16/src/: main.cpp
lesson17/: CMakeLists.txt
lesson17/src/: main.cpp
lesson18/: CMakeLists.txt
lesson18/src/: main.cpp
lesson19/: CMakeLists.txt
lesson19/src/: main.cpp
lesson20/: CMakeLists.txt
lesson20/src/: constants.h  disjoint_set.cpp  disjoint_set.h  helpers.cpp  helpers.h  main.cpp
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  libutils.cbp  libutils.lib
libs/utils/libutils/: fast_random.h  rasserts.cpp  rasserts.h  timer.h
